sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:17: error: ';' expected but '=' found.
    ecart:Int = (ecart.toDouble / 2).toInt
              ^